--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,19 +1,48 @@
 /* general container for HomePage */
 .container {
+  padding: 1.5rem;
+}
+
+/* Header section */
+.header {
   text-align: center;
-  padding: 10px;
+  margin-bottom: 1rem;
+}
+
+/* the "https://meyerweb.com/eric/tools/css/reset/reset.css" stylesheet that was included in index.html by default causes lists and heading text to not display properly */
+.header h1 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 /* section for featured contents */
 .features {
   display: flex;
   justify-content: center;
-  gap: 20px;
-  margin-top: 20px;
+  gap: 2rem;
+  margin-top: 1rem;
 }
 
 /* individual feature box styling */
 .feature {
   border: 1px dashed white;
   width: 100%;
+  text-align: left;
+  padding: 1.5rem;
+}
+
+/* the "https://meyerweb.com/eric/tools/css/reset/reset.css" stylesheet that was included in index.html by default causes lists and heading text to not display properly */
+.feature h3 {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+  text-align: center;
+}
+
+.feature ul {
+  list-style-type: disc;
+  list-style-position: outside;
+}
+
+.feature li {
+  margin-bottom: 0.5rem; /* add gap between bulletpoints */
 }
