--- a/src/pages/SpaceCraftsPage/SpaceCraftsPage.module.css
+++ b/src/pages/SpaceCraftsPage/SpaceCraftsPage.module.css
@@ -1,7 +1,22 @@
+.pageContainer {
+  display: flex;
+  flex-direction: column; /* stack children vertically */
+  gap: 1rem; /* add gap between each item */
+  align-items: flex-start; /* items should only take up as much width as they need, not stretch */
+}
+
+.cardsContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+}
+
 .spCard {
   border: 1px solid white;
   padding: 1.5em;
   display: flex;
+  flex-direction: row;
 }
 
 .spCardItem {
@@ -10,4 +25,23 @@
 
 .spCardDetails {
   flex-grow: 2;
+}
+
+.spacecraftImg {
+  height: 4rem;
+  width: 4rem;
+  object-fit: contain; /* scale image to fit */
+  padding: 0.5rem;
+  border: 1px dashed white;
+}
+
+.placeholderImg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px dashed white;
+  height: 4rem;
+  width: 4rem;
+  padding: 0.5rem;
+  font-size: 2rem; /* scale emoji */
 }
