added planets page interactions so you can click a planet and spaceship to move it to the desired destination planet

--- a/src/pages/PlanetsPage/PlanetsPage.module.css
+++ b/src/pages/PlanetsPage/PlanetsPage.module.css
@@ -72,3 +72,13 @@
   align-items: center;
   font-size: 2rem;
 }
+
+/* reads as hover effect only for unselected items */
+.planetInfoCard:not(.selected):hover,
+.spacecraftInfoCard:not(.selected):hover {
+  border-color: green;
+}
+
+.selected {
+  border-color: red;
+}
